[package]
name = "gameframe"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A minimal Wayland compositor similar to gamescope, with broad GPU support including older cards, OpenGL/Vulkan, and XWayland."
license = "MIT"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = ["backend_udev", "backend_drm", "backend_session_libseat", "renderer_gles", "renderer_multi", "xwayland"] }
calloop = "0.12"
slog = "2.7"
slog-stdlog = "4.1"
clap = { version = "4.5", features = ["derive"] }
xkbcommon = { version = "0.7", features = ["wayland"] }
wayland-server = "0.31"
bitflags = "2.4"
nix = { version = "0.29", features = ["user"] }
thiserror = "1.0"
libc = "0.2"
memmap2 = "0.9"
drm-fourcc = "2.2"
gbm = "0.15"
input = "0.9"
udev = "0.9"
drm = "0.12"
egl = "0.16"
gles2 = "0.2"
ash = { version = "0.38", optional = true }  # Made optional to fix feature error
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"

[features]
default = ["opengl"]
opengl = []
vulkan = ["smithay/renderer_vulkan", "ash"]
